# DDS-Record-Replay

./: .gitmodules  PLATFORM_SUPPORT.md  README.md  VERSION  codecov.yml  conf-recorder.yaml  ddsrecorder.repos  ddsrecordreplay.repos  install_dds_record_replay.sh  install_dependencies.sh  install_mcap_amd64.sh  readthedocs.yaml
controller/controller_tool/: CMakeLists.txt  package.xml  project_settings.cmake
controller/controller_tool/ddstypes/ControllerCommand/: CMakeLists.txt  ControllerCommand.cxx  ControllerCommand.h  ControllerCommand.i  ControllerCommand.idl  ControllerCommandPubSubTypes.cxx  ControllerCommandPubSubTypes.h
controller/controller_tool/ddstypes/DdsRecorderCommand/: CMakeLists.txt  DdsRecorderCommand.h  DdsRecorderCommand.hpp  DdsRecorderCommand.i  DdsRecorderCommandCdrAux.hpp  DdsRecorderCommandCdrAux.ipp  DdsRecorderCommandPubSubTypes.cxx  DdsRecorderCommandPubSubTypes.h  DdsRecorderCommandPubSubTypes.i  DdsRecorderCommandTypeObjectSupport.cxx  DdsRecorderCommandTypeObjectSupport.hpp  DdsRecorderCommandv1.cxx
controller/controller_tool/ddstypes/DdsRecorderStatus/: CMakeLists.txt  DdsRecorderStatus.cxx  DdsRecorderStatus.h  DdsRecorderStatus.hpp  DdsRecorderStatus.i  DdsRecorderStatus.idl  DdsRecorderStatusCdrAux.hpp  DdsRecorderStatusCdrAux.ipp  DdsRecorderStatusPubSubTypes.cxx  DdsRecorderStatusPubSubTypes.h  DdsRecorderStatusPubSubTypes.i  DdsRecorderStatusTypeObjectSupport.cxx  DdsRecorderStatusTypeObjectSupport.hpp  DdsRecorderStatusv1.cxx  DdsRecorderStatusv1.h
controller/controller_tool/ddstypes/Status/: CMakeLists.txt  Status.cxx  Status.h  Status.idl  Status.py
controller/controller_tool/tool/: CMakeLists.txt
controller/controller_tool/tool/executable/: ddsrecorder_controller  ddsrecorder_controller.bat  ddsrecorder_controller.bat.in
converter/mcap_convert_tool/: CMakeLists.txt  README.md  package.xml  project_settings.cmake
converter/mcap_convert_tool/src/cpp/: main.cpp
converter/mcap_convert_tool/test/: CMakeLists.txt
converter/mcap_convert_tool/test/blackbox/: CMakeLists.txt  McapConvertTest.cpp
ddsrecorder/: CMakeLists.txt  README.md  package.xml  project_settings.cmake
ddsrecorder/include/ddsrecorder/configuration/: BaseConfiguration.hpp  DDSRouterConfiguration.hpp  DDSRouterReloadConfiguration.hpp  SpecsConfiguration.hpp
ddsrecorder/include/ddsrecorder/core/: DDSRouter.hpp
ddsrecorder/src/cpp/: main.cpp
ddsrecorder/src/cpp/command_receiver/: CommandReceiver.cpp  CommandReceiver.hpp
ddsrecorder/src/cpp/communication/: Bridge.cpp  Bridge.hpp  DDSBridge.cpp  DDSBridge.hpp  Track.cpp  Track.hpp
ddsrecorder/src/cpp/configuration/: DDSRouterConfiguration.cpp  DDSRouterReloadConfiguration.cpp  SpecsConfiguration.cpp
ddsrecorder/src/cpp/core/: DDSRouter.cpp  DDSRouterImpl.cpp  DDSRouterImpl.hpp  ParticipantFactory.cpp  ParticipantFactory.hpp  ParticipantsDatabase.cpp  ParticipantsDatabase.hpp
ddsrecorder/src/cpp/dynamic/: AllowedTopicList.cpp  AllowedTopicList.hpp  DiscoveryDatabase.cpp  DiscoveryDatabase.hpp
ddsrecorder/src/cpp/participant/: IParticipant.hpp
ddsrecorder/src/cpp/reader/: IReader.hpp
ddsrecorder/src/cpp/recorder/: types.cpp  types.hpp
ddsrecorder/src/cpp/tool/: DdsRecorder.cpp  DdsRecorder.hpp  DdsRecorderMonitor.cpp  DdsRecorderMonitor.hpp
ddsrecorder/src/cpp/user_interface/: ProcessReturnCode.hpp  arguments_configuration.cpp  arguments_configuration.hpp  constants.hpp
ddsrecorder/src/cpp/writer/: IWriter.hpp
ddsrecorder/test/: CMakeLists.txt
ddsrecorder/test/blackbox/: CMakeLists.txt  FileCreationPartitionTest.hpp  FileCreationTest.hpp  constants.hpp
ddsrecorder/test/blackbox/both/: CMakeLists.txt  ResourceLimitsTest.cpp
ddsrecorder/test/blackbox/mcap/: CMakeLists.txt  DiskFullLogErrorMockTest.cpp  LogErrorMockTests.cpp  McapFileCreationPartitionTest.cpp  McapFileCreationStateTransitionTest.cpp  McapLogErrorTest.cpp  (+4 more)
ddsrecorder/test/labels/: XTSAN.list
ddsrecorder/test/resources/: CommandSender.py
ddsrecorder/test/unittest/: CMakeLists.txt
ddsrecorder_participants/: CMakeLists.txt  README.md  package.xml  project_settings.cmake
ddsrecorder_participants/include/ddsrecorder_participants/: constants.hpp
ddsrecorder_participants/test/unittest/: CMakeLists.txt
ddsrecorder_yaml/: CMakeLists.txt  README.md  package.xml  project_settings.cmake
ddsrecorder_yaml/include/ddsrecorder_yaml/: Yaml.hpp  YamlManager.hpp  YamlReader.hpp  YamlReaderConfiguration.hpp  yaml_configuration_tags.hpp
ddsrecorder_yaml/src/cpp/: YamlManager.cpp  YamlReader.cpp  YamlReaderConfiguration.cpp  yaml_configuration_tags.cpp
ddsrecorder_yaml/test/: CMakeLists.txt  DdsConfiguration.yaml  ParseYamlTest.cpp  YamlGetConfigurationDdsRecorderReplayerTest.cpp  YamlResourceLimitsTest.cpp
ddsreplayer/: CMakeLists.txt  README.md  package.xml  project_settings.cmake
ddsreplayer/src/cpp/: main.cpp
ddsreplayer/test/: CMakeLists.txt
ddsreplayer/test/blackbox/: CMakeLists.txt  FileReadTest.hpp
ddsreplayer/test/labels/: CMakeLists.txt  XTSAN.list
ddsreplayer/test/resources/: README.md  constants.hpp
dev-utils/cmake_utils/: README.md  package.xml  project_settings.cmake
dev-utils/cmake_utils/loader/: cmakeonly-Config.cmake.in  load_all.cmake
dev-utils/cmake_utils/test_installer/: gtest_aux.hpp
docs/: CMakeLists.txt  Makefile  README.md  conf.py  index.rst  package.xml  project_settings.cmake  requirements.txt
docs/resources/foxglove_tutorial/: conf.yaml
docs/rst/: spelling_wordlist.txt
docs/rst/appendixes/: glossary.rst
docs/rst/examples/: simple_example.rst
docs/rst/exports/: alias.include
docs/rst/formalia/: titlepage.rst
docs/rst/getting_started/: usage_example.rst
docs/rst/installation/: docker.rst  linux.rst  windows.rst
docs/rst/notes/: forthcoming_version.rst  notes.rst
docs/rst/tutorials/: dynamic_types.rst  foxglove_tutorial.rst
docs/rst/use_cases/: ros_cloud.rst
docs/rst/user_manual/: configuration.rst  user_interface.rst  user_manual_glossary.rst
docs/test/: CMakeLists.txt
tools/foxgloveweb/: CMakeLists.txt  README.md  package.xml  project_settings.cmake
(+1076 files in other folders)
