<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ddsreplayer_tool</name>
  <version>1.3.0</version>
  <description>
    *eProsima DDS Replayer* Application to execute a DDS Replayer from a YAML configuration file.
  </description>
  <maintainer email="RaulSanchezMateos@eprosima.com">Raul Sánchez-Mateos</maintainer>
  <maintainer email="javierparis@eprosima.com">Javier París</maintainer>
  <maintainer email="juanlopez@eprosima.com">Juan López</maintainer>
  <license file="LICENSE">Apache 2.0</license>

  <url type="website">https://www.eprosima.com/</url>
  <url type="bugtracker">https://github.com/eProsima/DDS-Record-Replay/issues</url>
  <url type="repository">https://github.com/eProsima/DDS-Record-Replay</url>

  <buildtool_depend>cmake</buildtool_depend>

  <depend>cpp_utils</depend>
  <depend>ddspipe_core</depend>
  <depend>ddsrecorder_participants</depend>
  <depend>ddsrecorder_yaml</depend>

  <doc_depend>doxygen</doc_depend>

  <test_depend>googletest-distribution</test_depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>
