<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>foxgloveweb_tool</name>
  <version>0.1.0</version>
  <description>
    *eProsima Foxglove Websocket* Application to execute a Foxglove Websocket from a YAML configuration file.
  </description>
  <maintainer email="RaulSanchezMateos@eprosima.com">Raul Sánchez-Mateos</maintainer>
  <maintainer email="javierparis@eprosima.com">Javier París</maintainer>
  <maintainer email="juanlopez@eprosima.com">Juan López</maintainer>
  <license file="LICENSE">Apache 2.0</license>

  <url type="website">https://www.eprosima.com/</url>
  <url type="bugtracker">https://github.com/eProsima/DDS-Recorder/issues</url>
  <url type="repository">https://github.com/eProsima/DDS-Recorder</url>

  <buildtool_depend>cmake</buildtool_depend>

  <depend>cpp_utils</depend>
  <depend>ddsrouter_core</depend>
  <depend>foxgloveweb_participants</depend>
  <depend>foxgloveweb_yaml</depend>

  <doc_depend>doxygen</doc_depend>

  <test_depend>googletest-distribution</test_depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>
